--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vuefinder",
-  "version": "0.1.1-beta",
+  "version": "0.1.2",
   "description": "vuefinder is an elegant web file manager.",
   "main": "src/Finder.vue",
   "scripts": {
