--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "@fortawesome/free-solid-svg-icons": "^5.1.0",
     "@fortawesome/vue-fontawesome": "^0.1.0",
     "axios": "^0.18.0",
+    "dragselect": "^1.8.0",
     "moment": "^2.22.2",
-    "mouse-select": "^1.2.2",
     "vue": "^2.5.16"
   }
 }
