--- a/package.json
+++ b/package.json
@@ -27,15 +27,15 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "laravel-mix": "^2.1.8"
+    "laravel-mix": "^2.1.14"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.0",
     "@fortawesome/free-solid-svg-icons": "^5.1.0",
     "@fortawesome/vue-fontawesome": "^0.1.0",
     "axios": "^0.18.0",
+    "date-fns": "^2.0.0-alpha.16",
     "dragselect": "^1.8.0",
-    "moment": "^2.22.2",
     "vue": "^2.5.16"
   }
 }
