--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "vue": "^3.2.0"
   },
   "dependencies": {
+    "dragselect": "^2.3.1",
     "mitt": "^3.0.0",
     "vite-plugin-css-injected-by-js": "^2.0.3"
   }
