--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "dependencies": {
     "dragselect": "^2.3.1",
+    "microtip": "^0.2.2",
     "mitt": "^3.0.0",
     "vite-plugin-css-injected-by-js": "^2.0.3"
   }
