--- a/package.json
+++ b/package.json
@@ -36,15 +36,14 @@
     "autoprefixer": "^10.4.8",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
-    "vite": "^3.0.4"
+    "vite": "^3.0.4",
+    "microtip": "^0.2.2",
+    "mitt": "^3.0.0"
   },
   "peerDependencies": {
+    "dragselect": "^2.3.1",
     "vue": "^3.2.0"
   },
   "dependencies": {
-    "dragselect": "^2.3.1",
-    "microtip": "^0.2.2",
-    "mitt": "^3.0.0",
-    "vite-plugin-css-injected-by-js": "^2.0.3"
   }
 }
