--- a/package.json
+++ b/package.json
@@ -34,16 +34,14 @@
     "@types/node": "^18.7.1",
     "@vitejs/plugin-vue": "^3.0.1",
     "autoprefixer": "^10.4.8",
+    "microtip": "^0.2.2",
+    "mitt": "^3.0.0",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
-    "vite": "^3.0.4",
-    "microtip": "^0.2.2",
-    "mitt": "^3.0.0"
+    "vite": "^3.0.4"
   },
   "peerDependencies": {
     "dragselect": "^2.3.1",
     "vue": "^3.2.0"
-  },
-  "dependencies": {
   }
 }
