--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vuefinder",
-  "version": "1.0.11",
-  "description": "vuefinder is an elegant web file manager.",
+  "version": "1.0.12",
+  "description": "Vuefinder is a file manager component for vuejs.",
   "type": "module",
   "files": [
     "dist"
