--- a/package.json
+++ b/package.json
@@ -46,5 +46,8 @@
     "plupload": "^2.3.9",
     "vanilla-lazyload": "^17.8.3",
     "vue": "^3.2.0"
+  },
+  "publishConfig": {
+    "@numberone:registry": "https://npm.pkg.github.com"
   }
 }
