--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "publish": "npm run build && npm publish"
+    "publish": "npm publish"
   },
   "homepage": "https://github.com/WitMiao/vuefinder#readme",
   "keywords": [
