chore: 增加版本更新脚本

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "publish": "npm publish",
-    "postversion": "npm version patch -m \"版本更新至%s\""
+    "postversion": "npm version patch -m \"chore: 版本更新至%s\""
   },
   "homepage": "https://github.com/WitMiao/vuefinder#readme",
   "keywords": [
