chore: 精简脚本名称

--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "publish": "npm publish",
-    "postversion": "npm version patch -m \"chore: 版本更新至%s\""
+    "pb": "npm publish",
+    "pv": "npm version patch -m \"chore: 版本更新至%s\""
   },
   "homepage": "https://github.com/WitMiao/vuefinder#readme",
   "keywords": [
