feat: nginx只读模式&项目预览页

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "main": "./dist/miao-vuefinder.cjs",
   "module": "./dist/miao-vuefinder.js",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite ./example",
     "build": "vite build",
     "preview": "vite preview",
     "pb": "npm publish",
